--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "heroku-postbuild": "cd my-app && npm install && npm run build",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false cd my-app && npm install && npm run build",
     "dev": "nodemon server.js"
   },
   "type": "module",
